--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title> Home Page</title>
 
-    <link rel="stylesheet" th:href="@{css/s.css}" />
-    <link rel="stylesheet" th:href="@{css/style/.css}" />
+    <link rel="stylesheet" href="@{css/s.css}" />
+    <link rel="stylesheet" href="@{css/style/.css}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/booztstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 
     </nav>
 </a>
-aaaaaaaa
+aaaaaaaaadfasdsdfs
 
 <div class="btn-group" role="group">
     <button type="submit" class="btn btn-outline-info" id="review_main">
